name:                material-ui
version:             0.1.0.0
synopsis:            Google's Material UI, in the browser, through Haskell
description:
  You'd like a demo, eh?
  .
  > view :: Pure React'
  > view = div_ $ do
  >     slider [ name "slider" ]
  >     button [ label_ "Primary", primary True ] $ return ()
  .
  Simple incantation, fantastic results. We've got a slider and a button. They don't do anything yet, of course...
license:             MIT
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag ghcjs
    description: tell cabal we're using ghcjs
    default: True

executable example
  if !flag(ghcjs)
    buildable: False
  main-is: Main.hs
  other-extensions:    OverloadedStrings, LiberalTypeSynonyms, JavaScriptFFI, LambdaCase
  build-depends:
    base > 4.5 && < 5,
    react-haskell == 1.4.*,
    unordered-containers,
    material-ui
  default-language:    Haskell2010
  js-sources:
    lib/stubs.js
  if flag(ghcjs)
    build-depends:
      ghcjs-base,
      ghcjs-dom
    ghcjs-options: -DGHCJS_BROWSER

library
  exposed-modules:     React.MaterialUI
  other-modules:
    React.MaterialUI.Attrs,
    React.MaterialUI.Elements,
    React.MaterialUI.Imports
  other-extensions:    OverloadedStrings, LiberalTypeSynonyms, JavaScriptFFI, LambdaCase, CPP
  build-depends:
    base > 4.5 && < 5,
    react-haskell == 1.4.*,
    aeson,
    text,
    vector,
    unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
